codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_pending_interaction codex_agent_pending_interaction_t;
typedef struct codex_agent_authorization_url codex_agent_authorization_url_t;
typedef struct codex_agent_pending_interaction_list codex_agent_pending_interaction_list_t;
typedef int32_t codex_agent_authorization_purpose_t;
typedef struct codex_agent_string_view {
    const uint8_t *data;
    size_t size;
} codex_agent_string_view_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_authorization_url_chat_gpt(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *value,
    codex_agent_authorization_url_t **out_url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_authorization_url_external(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *value,
    codex_agent_authorization_url_t **out_url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_authorization_url_destroy(
    codex_agent_context_t *context,
    codex_agent_authorization_url_t **url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_authorization_url_value_copy(
    codex_agent_context_t *context,
    codex_agent_authorization_url_t *url,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_authorization_url_purpose(
    codex_agent_context_t *context,
    codex_agent_authorization_url_t *url,
    codex_agent_authorization_purpose_t *out_purpose);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_interaction_list_destroy(
    codex_agent_context_t *context,
    codex_agent_pending_interaction_list_t **pending);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_interaction_list_count(
    codex_agent_context_t *context,
    codex_agent_pending_interaction_list_t *pending,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_pending_interaction_list_at(
    codex_agent_context_t *context,
    codex_agent_pending_interaction_list_t *pending,
    size_t index,
    codex_agent_pending_interaction_t **out_interaction);