codex-agent-bindings/cpp/include/codex_agent/codex_agent.hpp

enum class HookRunStatus : std::int32_t {
    running = CODEX_AGENT_HOOK_RUN_STATUS_RUNNING,
    completed = CODEX_AGENT_HOOK_RUN_STATUS_COMPLETED,
    failed = CODEX_AGENT_HOOK_RUN_STATUS_FAILED,
    blocked = CODEX_AGENT_HOOK_RUN_STATUS_BLOCKED,
    stopped = CODEX_AGENT_HOOK_RUN_STATUS_STOPPED,
};
enum class PlanStepStatus : std::int32_t {
    pending = CODEX_AGENT_PLAN_STEP_PENDING,
    in_progress = CODEX_AGENT_PLAN_STEP_IN_PROGRESS,
    completed = CODEX_AGENT_PLAN_STEP_COMPLETED,
};