codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeValueMethods.cs


    internal static CodexStatus InteractionStatePendingFor(
        nint context, nint state, nint conversationId, out nint pending)
    {
        var status = InteractionStatePendingForImport(context, state, conversationId, out pending);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_list_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionListDestroy(nint context, ref nint pending);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_list_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionListCount(nint context, nint pending, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_list_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionListAt(nint context, nint pending, nuint index, ref nint interaction);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_authorization_url_chat_gpt")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus AuthorizationUrlChatGptImport(
        nint context, NativeStringView* value, out nint url);

    internal static CodexStatus AuthorizationUrlChatGpt(nint context, NativeStringView* value, out nint url)
    {
        var status = AuthorizationUrlChatGptImport(context, value, out url);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_authorization_url_external")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus AuthorizationUrlExternalImport(
        nint context, NativeStringView* value, out nint url);

    internal static CodexStatus AuthorizationUrlExternal(nint context, NativeStringView* value, out nint url)
    {
        var status = AuthorizationUrlExternalImport(context, value, out url);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_authorization_url_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthorizationUrlDestroy(nint context, ref nint url);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_authorization_url_value_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthorizationUrlValueCopy(nint context, nint url, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_authorization_url_purpose")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthorizationUrlPurpose(nint context, nint url, out CodexAuthorizationPurpose purpose);
}
